# MCPSystemDemo

./: README.md  config.yaml  llm_client.py  main.py  mcp_discovery.py  mcp_server_filesystem.py  pyproject.toml  services.json
